--- a/app/src/main/res/layout/table_view_column_header_layout.xml
+++ b/app/src/main/res/layout/table_view_column_header_layout.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:barNumber="@{columnHeader.columnPosition}"
+            android:barNumber="@{columnHeader.columnPosition + 1}"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
