moved row selection

--- a/app/src/main/res/layout/table_view_row_header_layout.xml
+++ b/app/src/main/res/layout/table_view_row_header_layout.xml
@@ -25,6 +25,8 @@
 
             android:background="@color/instrumentBackground"
 
+            android:onClick="@{() -> vm.selectRow(rowHeader.rowPosition)}"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
