trying for cells

--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -9,6 +9,9 @@
             name="cell"
             type="com.sachinreddy.feature.data.table.Cell" />
         <variable
+            name="vm"
+            type="com.sachinreddy.feature.viewModel.AppViewModel" />
+        <variable
             name="view"
             type="android.view.View" />
     </data>
