moved cell operations -- risky

--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -43,6 +43,7 @@
                 app:cellColor="@color/colorPrimary"
                 app:buttonColor="@color/cardBackground"
                 android:data="@{cell.data}"
+                android:isPlaying="@{cell.playing}"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
