--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -11,9 +11,6 @@
         <variable
             name="vm"
             type="com.sachinreddy.feature.viewModel.AppViewModel" />
-        <variable
-            name="view"
-            type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,6 +41,7 @@
                 app:buttonColor="@color/cardBackground"
                 android:data="@{cell.data}"
                 android:isPlaying="@{cell.playing}"
+                android:onCellButtonClicked="@{() -> vm.onClickCellButton(cell)}"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
