--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="cell"
             type="com.sachinreddy.feature.data.table.Cell" />
@@ -10,6 +11,10 @@
         <variable
             name="vm"
             type="com.sachinreddy.feature.viewModel.AppViewModel" />
+
+        <variable
+            name="translationListener"
+            type="com.sachinreddy.feature.table.listener.TranslationListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,6 +28,7 @@
 
             android:background="@color/cardBackground"
             android:isSelected="@{cell.selected}"
+            android:translationListener="@{translationListener}"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
