--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,18 @@
             app:show_horizontal_separator="false"
             app:show_vertical_separator="false" />
 
+        <com.sachinreddy.feature.table.ui.view.OperationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:vm="@{vm}"
+            app:operationBackgroundColor="@color/instrumentBackground"
+            app:buttonBackgroundColor="@color/colorPrimary"
+
+            app:layout_constraintTop_toBottomOf="@id/content_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <com.emrekose.recordbutton.RecordButton
             android:id="@+id/recordBtn"
             android:layout_width="wrap_content"
