cleaned operation view stuff

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="row_header_width">80dp</dimen>
     <dimen name="cell_length">80dp</dimen>
     <dimen name="record_button_radius">28dp</dimen>
+    <dimen name="operation_view_height">36dp</dimen>
 </resources>
