--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -45,6 +46,9 @@
                 app:cellColor="@color/colorPrimary"
                 app:buttonColor="@color/cardBackground"
 
+                bind:cell="@{cell}"
+                bind:vm="@{vm}"
+
                 android:data="@{cell.data}"
                 android:isPlaying="@{cell.playing}"
                 android:onLongClick="@{(view) -> vm.onEditCellLongClicked(view, cell)}"
@@ -52,8 +56,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
