--- a/app/src/main/res/layout/table_view_row_header_layout.xml
+++ b/app/src/main/res/layout/table_view_row_header_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="rowHeader"
             type="com.sachinreddy.feature.data.table.RowHeader" />
@@ -10,34 +11,39 @@
         <variable
             name="vm"
             type="com.sachinreddy.feature.viewModel.AppViewModel" />
-
-        <variable
-            name="view"
-            type="android.view.View" />
     </data>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/row_header_container"
-        android:layout_width="@dimen/cell_length"
-        android:layout_height="@dimen/cell_length"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        android:background="@color/instrumentBackground"
-        android:onClick="@{() -> vm.selectRow(rowHeader.rowPosition)}">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/row_header_container"
+            android:layout_width="@dimen/cell_length"
+            android:layout_height="@dimen/cell_length"
 
-        <ImageView
-            android:id="@+id/row_header_imageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="20dp"
+            android:background="@color/instrumentBackground"
+            android:onClick="@{() -> vm.selectRow(rowHeader.rowPosition)}"
 
-            android:gravity="center"
-            android:src="@drawable/piano"
-
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/row_header_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="20dp"
+
+                android:gravity="center"
+                android:src="@drawable/piano"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
