--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="recordButtonColor">#FF6C6C</color>
     <color name="editCellColor">#434F59</color>
     <color name="selection_color">#616161</color>
+
+    <color name="operationBackground">#2C2C2C</color>
 </resources>
