--- a/app/src/main/res/layout/operation_view.xml
+++ b/app/src/main/res/layout/operation_view.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
 
         android:background="@drawable/round_half_background"
-        android:backgroundTint="@color/instrumentBackground"
+        android:backgroundTint="@color/operationBackground"
 
         app:layout_constraintTop_toBottomOf="@id/content_container"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +33,16 @@
             android:onClick="@{() -> vm.addTrack()}"
 
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.sachinreddy.feature.table.ui.view.OperationButton
+            android:layout_width="@dimen/cell_length"
+            android:layout_height="@dimen/operation_view_height"
+
+            app:buttonCircleColor="@color/whitesmoke"
+            android:onClick="@{(view) -> vm.toggleSelection(view)}"
+
+            app:layout_constraintStart_toEndOf="@id/operation_add_button"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
