--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,5 +17,6 @@
 
     <declare-styleable name="OperationButton">
         <attr name="buttonCircleColor" format="color" />
+        <attr name="buttonImage" format="reference" />
     </declare-styleable>
 </resources>
