--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.sachinreddy.feature.viewModel.AppViewModel" />
+
+        <variable
+            name="scrollingListener"
+            type="com.sachinreddy.feature.table.listener.ScrollingListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,6 +38,19 @@
             app:separator_color="@color/colorPrimary"
             app:show_horizontal_separator="false"
             app:show_vertical_separator="false" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/right_threshold"
+            android:layout_width="@dimen/operation_scroll_view"
+            android:layout_height="0dp"
+
+            android:background="@color/transparent"
+            android:draggedCell="@{vm.draggedCell}"
+            android:scrollingListener="@{scrollingListener}"
+
+            app:layout_constraintTop_toTopOf="@id/content_container"
+            app:layout_constraintEnd_toEndOf="@id/content_container"
+            app:layout_constraintBottom_toBottomOf="@id/content_container" />
 
         <com.sachinreddy.feature.table.ui.view.OperationView
             android:layout_width="match_parent"
