--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="record_button_radius">28dp</dimen>
     <dimen name="operation_view_height">36dp</dimen>
     <dimen name="operation_button_length">28dp</dimen>
+    <dimen name="operation_scroll_view">44dp</dimen>
 </resources>
