--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="record_button_radius">28dp</dimen>
     <dimen name="operation_view_height">36dp</dimen>
     <dimen name="operation_button_length">28dp</dimen>
-    <dimen name="operation_scroll_view">44dp</dimen>
+    <dimen name="scroll_view_left">114dp</dimen>
+    <dimen name="scroll_view_right">44dp</dimen>
 </resources>
