--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="cell"
             type="com.sachinreddy.feature.data.table.Cell" />
+
         <variable
             name="vm"
             type="com.sachinreddy.feature.viewModel.AppViewModel" />
@@ -33,6 +36,21 @@
                 android:background="#00000000"
                 android:src="@drawable/ic_play"
                 android:tint="@color/cardBackground" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|left"
+
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="4dp"
+
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp"
+                android:fontFamily="@font/roboto_medium"
+
+                android:number="@{cell.data.size()}"
+                tools:text="1" />
 
         </androidx.cardview.widget.CardView>
 
