--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -38,6 +38,8 @@
                 android:tint="@color/cardBackground" />
 
             <TextView
+                android:id="@+id/test_number"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|left"
