--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,6 +50,42 @@
             app:layout_constraintEnd_toEndOf="@id/content_container" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="@dimen/row_header_width"
+            android:layout_marginTop="@dimen/column_header_height"
+            android:elevation="12dp"
+
+            app:layout_constraintTop_toTopOf="@id/content_container"
+            app:layout_constraintStart_toStartOf="@id/content_container">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:gravity="center"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+
+                android:clickable="false"
+                android:focusable="false"
+                android:background="@drawable/round_border_dark"
+                android:backgroundTint="@color/recordButtonColor"
+
+                android:text="4:21"
+                android:textColor="@color/editCellColor"
+                android:fontFamily="@font/roboto_medium"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="@dimen/scroll_view_left"
             android:layout_height="0dp"
             android:background="@color/transparent"
