--- a/numberpicker/src/main/res/values/styles.xml
+++ b/numberpicker/src/main/res/values/styles.xml
@@ -76,13 +76,11 @@
 
     <style name="NumberPicker.EditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:selectAllOnFocus">true</item>
+        <item name="android:selectAllOnFocus">false</item>
         <item name="android:textIsSelectable">false</item>
-        <item name="android:inputType">numberSigned</item>
         <item name="android:gravity">center</item>
-        <item name="android:editable">true</item>
+        <item name="android:editable">false</item>
         <item name="android:background">@null</item>
-        <item name="android:imeOptions">actionDone</item>
     </style>
 
     <style name="NumberPicker.EditTextStyle.Disabled">
