--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:background="@drawable/round_border_dark"
+            android:background="@drawable/round_border_dark_radius"
             android:backgroundTint="@color/cardBackground"
 
             android:layout_gravity="center"
@@ -39,6 +39,8 @@
             app:picker_min="0"
             android:progress="50"
             app:picker_stepSize="2"
+
+            android:layout_margin="10dp"
 
             app:picker_tracker="exponential"
             app:picker_orientation="horizontal" />
