--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,45 @@
         android:background="@color/colorBackground"
         tools:context=".activity.AppActivity">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/app_action_bar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+
+            android:minHeight="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.sachinreddy.numberpicker.NumberPicker
+                android:id="@+id/numberPicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:background="@drawable/round_border_dark_radius"
+                android:backgroundTint="@color/cardBackground"
+
+                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
+
+                style="@style/NumberPicker.Filled"
+                app:picker_editTextStyle="@style/textAccent"
+
+                app:picker_max="200"
+                app:picker_min="40"
+                android:progress="120"
+                app:picker_stepSize="2"
+
+                android:layout_margin="10dp"
+
+                app:picker_tracker="exponential"
+                app:picker_orientation="horizontal" />
+
+        </androidx.appcompat.widget.Toolbar>
+
         <com.evrencoskun.tableview.TableView
             android:id="@+id/content_container"
             android:layout_width="match_parent"
@@ -26,7 +65,7 @@
             android:rowHeaders="@{vm.rowHeaders}"
 
             app:column_header_height="@dimen/column_header_height"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/app_action_bar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
